--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "body-parser": "^1.11.0",
+    "cookie-parser": "^1.3.3",
+    "csurf": "^1.6.6",
+    "debug": "^2.1.1",
+    "express": "~4.9.x",
+    "flux-router-component": "^0.5.7",
+    "fluxible": "^0.2.0",
+    "fluxible-plugin-routr": "^0.3.0",
+    "node-jsx": "^0.12.4",
+    "serialize-javascript": "^1.0.0"
   },
   "devDependencies": {
     "jest-cli": "^0.2.1"
