--- a/package.json
+++ b/package.json
@@ -36,6 +36,20 @@
     "serialize-javascript": "^1.0.0"
   },
   "devDependencies": {
-    "jest-cli": "^0.2.1"
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-nodemon": "^0.3.0",
+    "grunt-webpack": "^1.0.8",
+    "jest-cli": "^0.2.1",
+    "jsx-loader": "^0.12.0",
+    "nodemon": "^1.2.1",
+    "webpack": "^1.4.12",
+    "webpack-dev-server": "^1.6.5"
+  },
+  "scripts": {
+    "dev": "grunt"
   }
 }
