--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "Cardian",
-    "EDR"
+    "Dashcam"
   ],
   "author": "Jason C. Huang",
   "license": "MIT",
@@ -44,12 +44,14 @@
     "grunt-nodemon": "^0.3.0",
     "grunt-webpack": "^1.0.8",
     "jest-cli": "^0.2.1",
+    "jshint": "^2.6.0",
     "jsx-loader": "^0.12.0",
     "nodemon": "^1.2.1",
+    "precommit-hook": "^1.0.7",
     "webpack": "^1.4.12",
     "webpack-dev-server": "^1.6.5"
   },
-  "scripts": {
-    "dev": "grunt"
-  }
+  "precommit": [
+    "test"
+  ]
 }
