--- a/package.json
+++ b/package.json
@@ -1,57 +1,63 @@
 {
-  "name": "carweb",
-  "version": "0.1.0",
-  "description": "Cardian website",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kaddopur/carweb.git"
-  },
-  "keywords": [
-    "Cardian",
-    "Dashcam"
-  ],
-  "author": "Jason C. Huang",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kaddopur/carweb/issues"
-  },
-  "homepage": "https://github.com/kaddopur/carweb",
-  "engines": {
-    "node": "0.10.x"
-  },
-  "dependencies": {
-    "body-parser": "^1.11.0",
-    "cookie-parser": "^1.3.3",
-    "csurf": "^1.6.6",
-    "debug": "^2.1.1",
-    "express": "~4.9.x",
-    "flux-router-component": "^0.5.7",
-    "fluxible": "^0.2.0",
-    "fluxible-plugin-routr": "^0.3.0",
-    "node-jsx": "^0.12.4",
-    "serialize-javascript": "^1.0.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-nodemon": "^0.3.0",
-    "grunt-webpack": "^1.0.8",
-    "jest-cli": "^0.2.1",
-    "jshint": "^2.6.0",
-    "jsx-loader": "^0.12.0",
-    "nodemon": "^1.2.1",
-    "precommit-hook": "^1.0.7",
-    "webpack": "^1.4.12",
-    "webpack-dev-server": "^1.6.5"
-  },
-  "precommit": [
-    "test"
-  ]
+    "name": "carweb",
+    "version": "0.1.0",
+    "description": "Cardian website",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kaddopur/carweb.git"
+    },
+    "keywords": [
+        "Cardian",
+        "Dashcam"
+    ],
+    "author": "Jason C. Huang",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/kaddopur/carweb/issues"
+    },
+    "homepage": "https://github.com/kaddopur/carweb",
+    "engines": {
+        "node": "0.10.x"
+    },
+    "dependencies": {
+        "body-parser": "^1.11.0",
+        "cookie-parser": "^1.3.3",
+        "csurf": "^1.6.6",
+        "debug": "^2.1.1",
+        "express": "~4.9.x",
+        "flux-router-component": "^0.5.7",
+        "fluxible": "^0.2.0",
+        "fluxible-plugin-routr": "^0.3.0",
+        "node-jsx": "^0.12.4",
+        "react": "^0.12.2",
+        "react-tools": "^0.12.2",
+        "serialize-javascript": "^1.0.0"
+    },
+    "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-cli": "^0.1.13",
+        "grunt-concurrent": "^1.0.0",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-copy": "^0.7.0",
+        "grunt-nodemon": "^0.3.0",
+        "grunt-webpack": "^1.0.8",
+        "jest-cli": "^0.2.1",
+        "jshint": "^2.6.0",
+        "jsx-loader": "^0.12.0",
+        "nodemon": "^1.2.1",
+        "precommit-hook": "^1.0.7",
+        "webpack": "^1.4.12",
+        "webpack-dev-server": "^1.6.5"
+    },
+    "precommit": [
+        "test"
+    ],
+    "jest": {
+        "scriptPreprocessor": "<rootDir>/preprocessor.js",
+        "unmockedModulePathPatterns": ["<rootDir>/node_modules/react"]
+    }
 }
