--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "Cardian website",
     "main": "index.js",
     "scripts": {
+        "postinstall": "grunt production",
+        "start": "node server.js",
         "test": "jest"
     },
     "repository": {
@@ -32,12 +34,6 @@
         "flux-router-component": "^0.5.7",
         "fluxible": "^0.2.0",
         "fluxible-plugin-routr": "^0.3.0",
-        "node-jsx": "^0.12.4",
-        "react": "^0.12.2",
-        "react-tools": "^0.12.2",
-        "serialize-javascript": "^1.0.0"
-    },
-    "devDependencies": {
         "grunt": "^0.4.5",
         "grunt-cli": "^0.1.13",
         "grunt-concurrent": "^1.0.0",
@@ -45,13 +41,19 @@
         "grunt-contrib-copy": "^0.7.0",
         "grunt-nodemon": "^0.3.0",
         "grunt-webpack": "^1.0.8",
-        "jest-cli": "^0.2.1",
-        "jshint": "^2.6.0",
         "jsx-loader": "^0.12.0",
-        "nodemon": "^1.2.1",
-        "precommit-hook": "^1.0.7",
+        "node-jsx": "^0.12.4",
+        "react": "^0.12.2",
+        "react-tools": "^0.12.2",
+        "serialize-javascript": "^1.0.0",
         "webpack": "^1.4.12",
         "webpack-dev-server": "^1.6.5"
+    },
+    "devDependencies": {
+        "jest-cli": "^0.2.1",
+        "jshint": "^2.6.0",
+        "nodemon": "^1.2.1",
+        "precommit-hook": "^1.0.7"
     },
     "precommit": [
         "test"
