--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ],
     "jest": {
         "scriptPreprocessor": "<rootDir>/preprocessor.js",
-        "unmockedModulePathPatterns": ["<rootDir>/node_modules/react"]
+        "unmockedModulePathPatterns": ["<rootDir>/node_modules/react"],
+        "testFileExtensions": ["js", "jsx"]
     }
 }
