--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,17 @@
 {
   "node": true,
-
+  "esnext": true,
+  "bitwise": true,
+  "camelcase": true,
   "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "indent": 2,
   "latedef": true,
-  "quotmark": true,
+  "newcap": true,
+  "noarg": true,
+  "quotmark": "single",
   "undef": true,
   "unused": true,
-  "trailing": true
+  "strict": true
 }
