--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "grunt",
-    "lint": "grunt jshint"
+    "lint": "grunt jshint",
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.6.4",
@@ -17,6 +18,7 @@
     "fluxible": "^0.2.0",
     "fluxible-plugin-fetchr": "^0.2.1",
     "fluxible-plugin-routr": "^0.3.0",
+    "jest-cli": "^0.2.2",
     "node-jsx": "^0.12.0",
     "react": "^0.12.0",
     "serialize-javascript": "^1.0.0",
@@ -37,7 +39,17 @@
     "jsx-loader": "~0.12.0",
     "nodemon": "^1.2.1",
     "precommit-hook": "^1.0.7",
+    "react-tools": "^0.12.2",
     "webpack": "^1.4.12",
     "webpack-dev-server": "^1.6.5"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ],
+    "testFileExtensions": [
+      "jsx"
+    ]
   }
 }
