--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "carweb",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "engines": {
+    "node": "0.10.x",
+    "npm": "2.0.x"
+  },
   "private": true,
   "scripts": {
     "dev": "grunt",
