--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-webpack": "^1.0.8",
     "json-loader": "~0.5.1",
     "jsx-loader": "~0.12.0",
+    "lodash": "^3.2.0",
     "node-jsx": "^0.12.0",
     "react": "^0.12.0",
     "serialize-javascript": "^1.0.0",
