--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel": "^4.6.3",
     "body-parser": "^1.6.4",
     "cookie-parser": "^1.3.3",
     "csurf": "^1.6.3",
@@ -21,8 +22,8 @@
     "express": "^4.3.2",
     "express-state": "^1.2.0",
     "flux-router-component": "^0.6.0",
-    "fluxible": "^0.3.3",
-    "fluxible-plugin-fetchr": "^0.2.3",
+    "fluxible": "^0.3.0",
+    "fluxible-plugin-fetchr": "^0.2.1",
     "fluxible-plugin-routr": "^0.3.0",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
