--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel": "^4.6.3",
     "body-parser": "^1.6.4",
+    "classnames": "^1.2.0",
     "cookie-parser": "^1.3.3",
     "csurf": "^1.6.3",
     "debug": "^2.0.0",
