--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-webpack": "^1.0.8",
     "json-loader": "~0.5.1",
     "jsx-loader": "~0.12.0",
+    "babel-loader": "^4.0.0",
     "lodash": "^3.2.0",
     "node-jsx": "^0.12.0",
     "react": "^0.13.0",
