--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "async": "0.9.x",
     "body-parser": "^1.6.4",
     "cookie-parser": "^1.3.3",
     "csurf": "^1.6.3",
@@ -44,6 +45,7 @@
     "jest-cli": "^0.2.2",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
+    "jsxhint" "0.14.x",
     "nodemon": "^1.2.1",
     "precommit-hook": "^1.0.7",
     "react-tools": "^0.12.2",
