--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "grunt jshint",
     "postinstall": "grunt production",
     "start": "node server.js",
-    "test": "jest"
+    "test": "mocha tests/unit/**/*.js"
   },
   "dependencies": {
     "babel": "^4.6.3",
+    "babel-loader": "^4.0.0",
     "body-parser": "^1.6.4",
+    "chai": "^2.2.0",
     "classnames": "^1.2.0",
     "cookie-parser": "^1.3.3",
     "csurf": "^1.6.3",
@@ -36,8 +38,8 @@
     "grunt-webpack": "^1.0.8",
     "json-loader": "~0.5.1",
     "jsx-loader": "~0.12.0",
-    "babel-loader": "^4.0.0",
     "lodash": "^3.2.0",
+    "mocha": "^2.2.4",
     "node-jsx": "^0.12.0",
     "react": "^0.13.0",
     "serialize-javascript": "^1.0.0",
@@ -45,7 +47,6 @@
   },
   "devDependencies": {
     "bundle-loader": "~0.5.0",
-    "jest-cli": "^0.2.2",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
     "nodemon": "^1.2.1",
@@ -53,15 +54,6 @@
     "react-tools": "^0.12.2",
     "webpack": "^1.4.12",
     "webpack-dev-server": "^1.6.5"
-  },
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/preprocessor.js",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
-    ],
-    "testFileExtensions": [
-      "jsx"
-    ]
   },
   "precommit": [
     "lint",
