--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "grunt jshint",
     "postinstall": "grunt production",
     "start": "node server.js",
-    "test": "mocha tests/unit/**/*.js"
+    "test": "mocha tests/unit/* --reporter nyan"
   },
   "dependencies": {
     "babel": "^4.6.3",
