--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-nodemon": "~0.3.0",
     "grunt-webpack": "^1.0.8",
+    "immutable": "^3.7.2",
     "json-loader": "~0.5.1",
     "jsx-loader": "~0.12.0",
     "lodash": "^3.2.0",
