--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bundle-loader": "~0.5.0",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
+    "jsxhint": "^0.14.0",
     "nodemon": "^1.2.1",
     "precommit-hook": "^1.0.7",
     "react-tools": "^0.12.2",
